--- a/01WEBSTANDARD/web/css/style.css
+++ b/01WEBSTANDARD/web/css/style.css
@@ -120,6 +120,34 @@
 .notice {position: relative;}
 .notice h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
 .notice ul {}
-.notice ul li {overflow: hidden; text-overflow: ellipsis;white-space: nowrap;} /*overflow: hidden; width: 50px; height: 10px; 내가 지정한 영역외에 보이지 말라는 뜻*/
+.notice ul li {overflow: hidden; text-overflow: ellipsis;white-space: nowrap; background:url(../img/dot.gif) no-repeat 0 8px; padding-left: 8px;} 
+/* overflow: hidden; 내가 지정한 영역외에 보이지 말라는 뜻 */
+/*overflow: hidden; width: 50px; height: 10px; 이렇게 세 줄 쓰면 한 줄 효과*/
 .notice ul li a {font-size: 12px;}
-.notice a.more {position: absolute; right: 0;top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px;height: 17px;}
+.notice a.more {position: absolute; right: 0;top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
+
+
+/* 게시판2 */
+.notice2 {position: relative; margin-top: 15px;}
+.notice2 h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice2 ul {}
+.notice2 ul li {overflow: hidden; background: url(../img/dot.gif) no-repeat 0 8px; padding-left: 8px;}
+.notice2 li a {float: left; width: 65%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice2 li span {float: right; width: 30%; text-align: right;}
+.notice2 a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
+
+/* 게시판3 */
+.notice3 {position: relative;}
+.notice3 h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice3 ul {}
+.notice3 ul li {position: relative; padding: 8px 0 14px 60px;}
+.notice3 ul li a {}
+.notice3 ul li a img {width: 50px; position: absolute; left: 0; top: 0; border: 1px solid #0093bd;}
+.notice3 ul li a strong {display: block; overflow: hidden; text-overflow: ellipsis;white-space: nowrap;}
+.notice3 ul li a span {display: block; overflow: hidden; text-overflow: ellipsis;white-space: nowrap; font-size: 12px;}
+.notice3 ul li a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
+
+
+
+
+
