--- a/01WEBSTANDARD/web/css/style.css
+++ b/01WEBSTANDARD/web/css/style.css
@@ -148,6 +148,30 @@
 .notice3 ul li a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
 
 
+/* Mouse Hover 1 */
+.notice_hover {}
+.notice_hover h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice_hover ul {overflow: hidden;}
+.notice_hover ul li {float: left; width: 93px; margin-right: 5px; text-align: center;}
+.notice_hover ul li:last-child {margin-right: 0px;}
+.notice_hover ul li a {}
+.notice_hover ul li a span {position: relative; display: block; width: 93px;height: 93px; line-height: 93px;}
+.notice_hover ul li a span img {width: 100%;}
+.notice_hover ul li a span em {visibility: hidden; position: absolute; left: 0;top: 0; background: rgba(0, 0, 0, 0.7); color: #fff; width: 100%;height: 100%;}
+.notice_hover ul li a span:hover em {visibility: visible;}
+.notice_hover ul li a strong {padding-top: 3px; display: inline-block; font-size: 12px;}
+
+/* Mouse Hover2 */
+.notice_hover2 {}
+.notice_hover2 ul {overflow: hidden;}
+.notice_hover2 ul li {float: left; width: 93px; margin-right: 5px; text-align: center;}
+.notice_hover2 ul li.last {margin-right: 0px;}
+.notice_hover2 ul li a {}
+.notice_hover2 ul li a span {position: relative; display: block; width: 93px; height: 93px;}
+.notice_hover2 ul li a span img {width: 100%;}
+.notice_hover2 ul li a span em {visibility: hidden; position: absolute; left: 0; bottom: 0; background: rgba(0, 0, 0, 0.7); color: #fff; width: 100%;}
+.notice_hover2 ul li a span:hover em {visibility: visible;}
+.notice_hover2 ul li a strong {}
 
 
 
