--- a/01WEBSTANDARD/web/css/style.css
+++ b/01WEBSTANDARD/web/css/style.css
@@ -175,7 +175,34 @@
 
 
 
-/* 컨텐츠 요소를 보이지 않게 하는 방법 */
+/* 컨텐츠 요소를 보이지 않게 하는 방법 
+1. display:none -- display:block -> 영역도 사라짐.
+2. visibility: hidden; -> 사라지나 영역은 살아있음.
+3. opacity: 0; <-> opacity:1; 영역유지
+4. width: 0; height 0; overflow:hidden;
+*/
 
+/* tab menu */
+.tab_menu {position: relative; border: 1px solid #ccc; padding: 8px; height: 105px;} 
+.tab_menu ul {overflow: hidden; border-bottom: 1px solid #ccc;}
+.tab_menu ul li {float: left; border: 1px solid #ccc; margin-right: -1px; margin-bottom: -1px;}
+.tab_menu ul li a {padding: 5px 10px; display: block;}
+.tab_menu ul li ul {position: absolute; left: 0; top: 48px; width: 270px; border: 0;}
+.tab_menu ul li ul li {float: none; border: 0; background: url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
+.tab_menu ul li ul li a {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding: 0 0 3px 0;}
+.tab_menu ul li.active {background: #2c94c4;}
+.tab_menu ul li.active a {color: #fff;}
+.tab_menu ul li.active ul li a {color: #333;}
+
+
+/* 게시판 4 */
+.notice4 {position: relative; border: 1px solid #ccc;}
+.notice4 h4 {border-bottom: 1px solid #ccc; font-size: 14px; color:#0093bd; font-weight: 700; padding: 8px 10px;}
+.notice4 h4 em {color: #cf3292;}
+.notice4 ul {padding: 10px;}
+.notice4 li {overflow: hidden; background: url(../img/dot.gif) no-repeat 0 8px; padding-left: 8px; padding-bottom: 2px;}
+.notice4 ul li a {float: left; width: 60%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice4 ul li span {float: right; width: 30%; text-align: right;}
+.notice4 a.more {position: absolute; right: 9px; top: 9px;}
 
 
