--- a/01WEBSTANDARD/web/css/reset.css
+++ b/01WEBSTANDARD/web/css/reset.css
@@ -28,6 +28,9 @@ dl, ul, li, ol, menu {list-style: none;}
 h1, h2, h3, h4, h5, h6 {font-size: 13px;color: #222;font-weight: normal;}
 
 
+/* 테두리 초기화 */
+img, fieldset {border:0 none;} /* img는 구 익스프레스에서 테두리가 생김*/
+
 /*  IR 효과  */
 /* 의미있는 이미지의 대체 텍스트를 제공하는 경우 -9999px만큼 빼서 안보이게 하는 것*/
 .ir_pm {display: block; overflow: hidden; font-size: 0; line-height: 0; text-indent: -9999px;}
