--- a/01WEBSTANDARD/web/css/style.css
+++ b/01WEBSTANDARD/web/css/style.css
@@ -11,7 +11,7 @@
 #wrap {}
 #header { height: 325px; background: url(../img/header_bg.jpg) center top repeat-x;}
 #contents {}
-#footer { height: 200px; background: #333;}
+#footer {border-top: 1px solid #eee;}
 
 
 /* 컨텐츠 레이아웃 */
@@ -248,11 +248,14 @@
 .popup li img {width: 100%;}
 
 
-
-
-
-
-
+/* 푸터 */
+.footer {padding: 25px 0; text-align: center;}
+.footer ul {margin-bottom: 20px;}
+.footer li {position: relative; display: inline; padding: 0 7px 0 10px;}
+.footer li:before {content: ''; width: 1px; height: 12px; background: #ccc; position: absolute; left: 0;top: 2px;}
+/* 이미지말고 bar 주는 법 */
+.footer li:first-child:before {width: 0;height: 0;}
+.footer .w3c {margin-top: 15px;}
 
 
 
